<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic1"
    tools:context=".ChoosingSizeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/choose_size"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:fontFamily="@font/bubblegum_sans"
            android:gravity="center"
            android:text="@string/choose_size"
            android:textColor="@color/title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pizza_pic"
                android:layout_width="137dp"
                android:layout_height="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pizza" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/sizes"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/big_size"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/text"
                android:layoutDirection="ltr"
                android:text="@string/big_size"
                android:textColor="@color/text"

                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="261dp" />

            <RadioButton
                android:id="@+id/family_size"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/text"
                android:layoutDirection="ltr"
                android:text="@string/family_size"
                android:textColor="@color/text"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="293dp" />

            <RadioButton
                android:id="@+id/personal_size"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/text"
                android:layoutDirection="ltr"
                android:text="@string/personal_size"
                android:textColor="@color/text"
                app:layout_constraintHorizontal_bias="0.384"
                tools:layout_editor_absoluteY="325dp" />

        </RadioGroup>

        <Button
            android:id="@+id/continue_to_toppings"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_to_toppings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_custom"
            android:text="@string/logout"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>