<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingOrderDetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_treatment_view"
        android:layout_width="218dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/bubblegum_sans"
        android:gravity="center"
        android:text="@string/order_details_view"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_set_status"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_status_view"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/set_status_view"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/pizzas_list"
        android:layout_width="368dp"
        android:layout_height="328dp"
        android:layout_marginTop="156dp"
        android:divider="#d1d1d1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_client_details"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:text="@string/show_client_details"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/client_details_layout"
        android:visibility="invisible"
        android:layout_width="250dp"
        android:layout_height="339dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

        <TextView
            android:id="@+id/client_name"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Name:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_name"
            android:layout_width="218dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/client_phone"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Phone Number:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_phone"
            android:layout_width="216dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/client_address"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Address:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_address"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>